--- a/index.html
+++ b/index.html
@@ -61,26 +61,17 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, temporibus.</p>
         </div>
 
-        <div class="carta">
-            <div class="contenedor_titulo_carta">
-                <h2>Titulo!</h2>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, temporibus.</p>
-        </div>
-
-        <div class="carta">
-            <div class="contenedor_titulo_carta">
-                <h2>Titulo!</h2>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, temporibus.</p>
-        </div>
 
     </section>
 
-    <section class="contenedor_seccion_1">
-
-    </section>
-    
+    <footer class="footer_pagina">
+        <p>© Copyright FunWeed!</p>
+        <div class="contenedor_redes">
+            <a href="#"><img src="/img/youtube.png" alt=""></a>
+            <a href="#"><img src="/img/facebook.png" alt=""></a>
+            <a href="#"><img src="/img/instagram.png" alt=""></a>
+        </div>
+    </footer>
 
 
 
