--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div class="nav__container">
     
-                <h1 class="nav__title">#menu</h1>
+                <h1 class="nav__title">FunWeed</h1>
     
                 <a href="#menu" class="nav__menu">
                     <img src="img/menu.svg" class="nav__icon">
@@ -113,32 +113,7 @@
 
     <section class="contenedor_seccion">
 
-        <div class="carta">
-            <div class="contenedor_titulo_carta">
-                <h2>Titulo!</h2>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, temporibus.</p>
-        </div>
 
-        <div class="carta">
-            <div class="contenedor_titulo_carta">
-                <h2>Titulo!</h2>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, temporibus.</p>
-        </div>
-
-        <div class="carta">
-            <div class="contenedor_titulo_carta">
-                <h2>Titulo!</h2>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, temporibus.</p>
-        </div>
-
-        <div class="carta">
-            <div class="contenedor_titulo_carta">
-                <h2>Titulo!</h2>
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum, temporibus.</p>
         </div>
 
 
